--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "next": "12.0.7",
+    "primeflex": "^2.0.0",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
